# redrob-TalentGraphAI

./: .gitattributes  .gitignore  DEPLOYMENT.md  LICENSE  PROJECT_REPORT.md  README.md  benchmark.py  preprocess.py  pyproject.toml  rank.py  run_diagnostics.py  submission_metadata.yaml
.github/workflows/: lint.yml  tests.yml
data/output/: submission.csv
data/processed/: parsed_jd.json
docs/: architecture.md  benchmark.md  diagnostics.md  methodology.md  ontology.md  pipeline.md  scoring.md
scripts/: generate_submission.py  prepare_data.py  profile_runtime.py  run_all_tests.py  run_benchmark.py  validate_submission.sh
src/: context.py  engine.py  validation.py
src/common/: __init__.py  constants.py  dates.py  io.py  logging_utils.py  math_utils.py  regex.py  streaming.py  text.py  timing.py
src/config/: __init__.py  keywords.py  loader.py  ontology.py  runtime.py  scoring_v1.py  thresholds.py
src/diagnostics/: __init__.py  ablation.py  candidate_report.py  capability_attribution.py  capability_contribution.py  capability_necessity.py  direct_dependency.py  evidence_exclusivity.py  evidence_precision.py  feature_importance.py  feature_statistics.py  honeypot_analysis.py  implicit_gain.py  ontology_report.py  ontology_stress.py  runtime_profile.py  score_distribution.py  validation_report.py
src/features/: __init__.py  base.py  consistency.py  experience.py  hireability.py  honeypot.py  jd.py  market.py  penalties.py  preferred.py  production.py  registry.py  utils.py
src/models/: __init__.py  (+6 more)
tests/: test_common.py  test_honeypot.py  test_integration.py
(+21 files in other folders)
